# SpaceShooter

./: .gitignore  CMakeLists.txt  README.md
include/: entity.h  game.h  resourceholder.h
src/: entity.cpp  game.cpp  main.cpp
